# Payments

./: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py  mock_gateway_app.py
app/api/: exception_handlers.py
app/api/middleware/: db_errors.py
app/api/v1/: __init__.py  dlq.py  gateway.py  health.py  metrics.py  mock_gateway.py  payments.py  users.py
app/api/v1/schemas/: monitoring.py  payment.py  users.py
app/application/dto/: payment.py
app/application/interfaces/: gateway.py  repositories.py
app/application/services/: retry_service.py
app/application/use_cases/: create_payment.py  create_user.py  deposit_balance.py  get_payment_status.py  process_payment.py  withdraw_balance.py
app/core/: dependencies.py  logging.py  metrics.py  settings.py
app/domain/: exceptions.py
app/domain/entities/: payment.py  transaction.py  user.py
app/domain/enums/: payment_direction.py  payment_status.py
app/infrastructure/db/: session.py
app/infrastructure/db/migrations/: env.py
app/infrastructure/db/models/: __init__.py  payment.py  payment_dlq.py  payment_task.py  transaction.py  user.py
app/infrastructure/payment_gateway/: base.py  http.py
app/infrastructure/queue/: consumer.py  producer.py
app/infrastructure/repositories/: payment.py  payment_dlq.py  payment_task.py  transaction.py  user.py
app/mock_gateway/: __init__.py  router.py
app/workers/: celery_app.py  payment_processor.py  payment_worker.py  queue.py  tasks.py
tests/: test_gateway.py  test_metrics.py  test_use_cases.py
(+2 files in other folders)
